fix spot spacing in the location-view.component.scss

--- a/frontend/src/app/components/location-view/location-view.component.scss
+++ b/frontend/src/app/components/location-view/location-view.component.scss
@@ -5,6 +5,8 @@
   text-align: left;
   border: none;
   outline: none;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 .sidebarScrollableSection {
